[package]
name = "ml_dataflow"
version = "0.1.0"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]

[dependencies]
timely="0.5"
timely_communication="0.5"
abomonation="0.5"
abomonation_derive="0.3"
log="0.4"
ndarray={version = "0.11", features = ["serde-1"]}
ndarray-linalg = { version = "0.9", features = ["openblas"] }
serde="1.0"
serde_derive="1.0"
csv="1.0.0-beta.5"
failure="0.1"
derive_more="0.9"
itertools="0.7"
num-traits = "0.2"
rand="0.4"

[dev-dependencies]
flexi_logger = "0.8"