[package]
name = "scaling_test"
version = "0.1.0"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]

[dependencies]
timely="0.6"
timely_communication="0.6"
ml_dataflow = { path = "../" }
flexi_logger = "0.8"
ndarray = "0.11"
log="0.4"
quicli = "0.3"
toml="0.4.6"
serde="1.0"
serde_derive="1.0"
lazy_static="1.1"
csv="1.0"